--- a/app/system_manifest.json
+++ b/app/system_manifest.json
@@ -498,16 +498,26 @@
     "debug_tools_enabled": true,
     "diagnostic_agents": [
       "debug_analyzer"
-    ]
+    ],
+    "schema_trace_tool_enabled": true
   },
   "manifest_meta": {
     "version": "1.0.0",
     "created_at": "2025-04-24T14:28:08.000Z",
-    "last_updated": "2025-04-24T20:04:01.731000",
+    "last_updated": "2025-04-24T20:51:19.832391",
     "last_updated_by": "dashboard_manifest_update.py"
   },
   "testing": {
     "last_endpoint_sweep": "\u2705 PASSED",
     "timestamp": "2025-04-24T16:44:39.819205"
+  },
+  "tools": {
+    "schema_trace": {
+      "name": "Schema Trace Tool",
+      "description": "Diagnostic utility that scans the codebase for missing schema definitions and route import errors",
+      "version": "1.0.0",
+      "path": "tools/schema_trace.py",
+      "enabled": true
+    }
   }
 }
