--- a/app/system_manifest.json
+++ b/app/system_manifest.json
@@ -258,6 +258,22 @@
       "bound_to_routes": [],
       "version": "v1.0.0",
       "checksum": "initial"
+    },
+    "ValidateSchemaHashRequest": {
+      "file": "app/schemas/validate_schema_hash.py",
+      "bound_to_routes": [
+        "/critic/validate_schema"
+      ],
+      "version": "v1.0.0",
+      "checksum": "initial"
+    },
+    "ValidateSchemaHashResult": {
+      "file": "app/schemas/validate_schema_hash.py",
+      "bound_to_routes": [
+        "/critic/validate_schema"
+      ],
+      "version": "v1.0.0",
+      "checksum": "initial"
     }
   },
   "routes": {
@@ -477,6 +493,12 @@
         "description": "Debug Analyzer diagnosis results for a loop execution",
         "schema": "LoopDebugResult",
         "retention_days": 30
+      },
+      "backend_patch_applied_20250424171200": {
+        "pattern": "backend_patch_applied_20250424171200",
+        "description": "Backend patch applied to fix missing schema and route imports",
+        "schema": "None",
+        "retention_days": 30
       }
     }
   },
@@ -504,8 +526,8 @@
   "manifest_meta": {
     "version": "1.0.0",
     "created_at": "2025-04-24T14:28:08.000Z",
-    "last_updated": "2025-04-24T20:51:19.832391",
-    "last_updated_by": "dashboard_manifest_update.py"
+    "last_updated": "2025-04-24T17:12:00.488418",
+    "last_updated_by": "backend_patch_manifest_update.py"
   },
   "testing": {
     "last_endpoint_sweep": "\u2705 PASSED",
