--- a/app/system_manifest.json
+++ b/app/system_manifest.json
@@ -274,15 +274,121 @@
       ],
       "version": "v1.0.0",
       "checksum": "initial"
+    },
+    "LoopPlanRequest": {
+      "file": "app/schemas/loop_schema.py",
+      "bound_to_routes": [
+        "/api/loop/plan"
+      ],
+      "version": "v1.0.0",
+      "checksum": "initial"
+    },
+    "LoopPlanResponse": {
+      "file": "app/schemas/loop_schema.py",
+      "bound_to_routes": [
+        "/api/loop/plan"
+      ],
+      "version": "v1.0.0",
+      "checksum": "initial"
+    },
+    "LoopCompletionRequest": {
+      "file": "app/schemas/loop_schema.py",
+      "bound_to_routes": [
+        "/api/loop/complete"
+      ],
+      "version": "v1.0.0",
+      "checksum": "initial"
+    },
+    "LoopCompletionResponse": {
+      "file": "app/schemas/loop_schema.py",
+      "bound_to_routes": [
+        "/api/loop/complete"
+      ],
+      "version": "v1.0.0",
+      "checksum": "initial"
+    },
+    "LoopValidateRequest": {
+      "file": "app/schemas/loop_schema.py",
+      "bound_to_routes": [
+        "/api/loop/validate"
+      ],
+      "version": "v1.0.0",
+      "checksum": "initial"
+    },
+    "LoopValidateResponse": {
+      "file": "app/schemas/loop_schema.py",
+      "bound_to_routes": [
+        "/api/loop/validate"
+      ],
+      "version": "v1.0.0",
+      "checksum": "initial"
+    },
+    "LoopTraceResponse": {
+      "file": "app/schemas/loop_schema.py",
+      "bound_to_routes": [
+        "/api/loop/trace"
+      ],
+      "version": "v1.0.0",
+      "checksum": "initial"
+    },
+    "LoopTraceRequest": {
+      "file": "app/schemas/loop_schema.py",
+      "bound_to_routes": [
+        "/api/loop/trace"
+      ],
+      "version": "v1.0.0",
+      "checksum": "initial"
+    },
+    "LoopResetResponse": {
+      "file": "app/schemas/loop_schema.py",
+      "bound_to_routes": [
+        "/api/loop/reset"
+      ],
+      "version": "v1.0.0",
+      "checksum": "initial"
+    },
+    "PersonaReflectRequest": {
+      "file": "app/schemas/loop_schema.py",
+      "bound_to_routes": [
+        "/api/loop/persona-reflect"
+      ],
+      "version": "v1.0.0",
+      "checksum": "initial"
+    },
+    "PersonaReflectResponse": {
+      "file": "app/schemas/loop_schema.py",
+      "bound_to_routes": [
+        "/api/loop/persona-reflect"
+      ],
+      "version": "v1.0.0",
+      "checksum": "initial"
+    },
+    "LoopValidationRequest": {
+      "file": "app/schemas/loop_validation_schema.py",
+      "bound_to_routes": [
+        "/api/loop/validate"
+      ],
+      "version": "v1.0.0",
+      "checksum": "initial"
+    },
+    "LoopValidationResult": {
+      "file": "app/schemas/loop_validation_schema.py",
+      "bound_to_routes": [
+        "/api/loop/validate"
+      ],
+      "version": "v1.0.0",
+      "checksum": "initial"
+    },
+    "LoopValidationError": {
+      "file": "app/schemas/loop_validation_schema.py",
+      "bound_to_routes": [
+        "/api/loop/validate"
+      ],
+      "version": "v1.0.0",
+      "checksum": "initial"
     }
   },
   "routes": {
-    "/loop/respond": {
-      "method": "POST",
-      "schema": "LoopResponseRequest",
-      "status": "registered",
-      "errors": []
-    },
     "/orchestrator/plan": {
       "method": "POST",
       "schema": "OrchestratorPlanRequest",
@@ -406,6 +512,48 @@
       "schema": "LoopDebugRequest",
       "status": "registered",
       "errors": []
+    },
+    "/api/loop/plan": {
+      "method": "POST",
+      "schema": "LoopPlanRequest",
+      "status": "registered",
+      "errors": []
+    },
+    "/api/loop/complete": {
+      "method": "POST",
+      "schema": "LoopCompletionRequest",
+      "status": "registered",
+      "errors": []
+    },
+    "/api/loop/respond": {
+      "method": "POST",
+      "schema": "LoopResponseRequest",
+      "status": "registered",
+      "errors": []
+    },
+    "/api/loop/validate": {
+      "method": "POST",
+      "schema": "LoopValidateRequest",
+      "status": "registered",
+      "errors": []
+    },
+    "/api/loop/trace": {
+      "method": "POST",
+      "schema": "LoopTraceRequest",
+      "status": "registered",
+      "errors": []
+    },
+    "/api/loop/reset": {
+      "method": "POST",
+      "schema": "LoopResetResponse",
+      "status": "registered",
+      "errors": []
+    },
+    "/api/loop/persona-reflect": {
+      "method": "POST",
+      "schema": "PersonaReflectRequest",
+      "status": "registered",
+      "errors": []
     }
   },
   "modules": {
@@ -499,6 +647,12 @@
         "description": "Backend patch applied to fix missing schema and route imports",
         "schema": "None",
         "retention_days": 30
+      },
+      "backend_refactor_schema_binding_20250424180533": {
+        "pattern": "backend_refactor_schema_binding_20250424180533",
+        "description": "Backend refactor to implement schema binding, test coverage, and route cleanup",
+        "schema": "None",
+        "retention_days": 30
       }
     }
   },
@@ -526,8 +680,8 @@
   "manifest_meta": {
     "version": "1.0.0",
     "created_at": "2025-04-24T14:28:08.000Z",
-    "last_updated": "2025-04-24T17:12:00.488418",
-    "last_updated_by": "backend_patch_manifest_update.py"
+    "last_updated": "2025-04-24T22:05:33.918698",
+    "last_updated_by": "backend_refactor_schema_binding.py"
   },
   "testing": {
     "last_endpoint_sweep": "\u2705 PASSED",
