--- a/.github/workflows/postmerge_validation.yml
+++ b/.github/workflows/postmerge_validation.yml
@@ -23,4 +23,5 @@ jobs:
 
       - name: Run Post-Merge Validation
         run: |
+          export PYTHONPATH=$PYTHONPATH:$(pwd)
           python app/validation/postmerge_validator.py
