Phase 2.3 - Drift Reporting Hardening Implementation

--- a/system/system_manifest.json
+++ b/system/system_manifest.json
@@ -47,12 +47,27 @@
               "GitHub Action Workflow"
             ],
             "notes": "Implemented post-merge validation system with operator governance. No automatic repairs are performed."
+          },
+          "phase_2.3": {
+            "name": "Drift Reporting Hardening",
+            "status": "in_progress",
+            "started_date": "2025-04-27",
+            "components": [
+              "Drift History Tracking",
+              "Drift Trend Logger",
+              "System Manifest Expansion",
+              "Baseline Drift Marker"
+            ],
+            "notes": "Implementing drift reporting hardening to track surface health over time. No automatic repairs are performed."
           }
         },
         "status": "in_progress"
       }
     },
-    "last_updated": "2025-04-27T15:12:51",
-    "last_updated_by": "Post-Merge Validation Installation"
+    "recent_surface_health_scores": [10.1],
+    "last_baseline_drift_reference": "baseline_surface_drift_v1.0_20250427",
+    "last_validation_timestamp": "2025-04-27T19:18:00",
+    "last_updated": "2025-04-27T19:18:00",
+    "last_updated_by": "Drift Reporting Hardening System"
   }
 }
