Phase 3.1 - Endpoint Health Verification Implementation

--- a/system/system_manifest.json
+++ b/system/system_manifest.json
@@ -50,7 +50,8 @@
           },
           "phase_2.3": {
             "name": "Drift Reporting Hardening",
-            "status": "in_progress",
+            "status": "completed",
+            "completed_date": "2025-04-27",
             "started_date": "2025-04-27",
             "components": [
               "Drift History Tracking",
@@ -58,7 +59,25 @@
               "System Manifest Expansion",
               "Baseline Drift Marker"
             ],
-            "notes": "Implementing drift reporting hardening to track surface health over time. No automatic repairs are performed."
+            "notes": "Implemented drift reporting hardening to track surface health over time. No automatic repairs are performed."
+          }
+        },
+        "status": "completed"
+      },
+      "phase_3": {
+        "name": "Execution Surface Verification",
+        "subphases": {
+          "phase_3.1": {
+            "name": "Endpoint Health Verification",
+            "status": "in_progress",
+            "started_date": "2025-04-27",
+            "components": [
+              "Endpoint Validator",
+              "Endpoint Drift Report",
+              "Drift History Integration",
+              "System Manifest Expansion"
+            ],
+            "notes": "Implementing endpoint health verification to validate API execution surfaces. No automatic repairs are performed."
           }
         },
         "status": "in_progress"
@@ -67,7 +86,10 @@
     "recent_surface_health_scores": [10.1],
     "last_baseline_drift_reference": "baseline_surface_drift_v1.0_20250427",
     "last_validation_timestamp": "2025-04-27T19:18:00",
-    "last_updated": "2025-04-27T19:18:00",
-    "last_updated_by": "Drift Reporting Hardening System"
+    "last_endpoint_validation_timestamp": null,
+    "last_endpoint_health_score": null,
+    "last_endpoint_drift_report_path": null,
+    "last_updated": "2025-04-27T19:47:00",
+    "last_updated_by": "Endpoint Health Verification System"
   }
 }
